--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,367 @@
-/* место для вашего кода */
+.header {
+    width: 100%;
+    padding: 92px 0;
+    background-color: #fff;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    max-width: 1340px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+
+}
+
+.header__links-list {
+    display: flex;
+    align-items: center;
+}
+
+.header__menu {
+    margin-right: 205px;
+}
+
+.header__links-list-items {
+    padding-left: 14px;
+    list-style: circle inside;
+}
+
+.header__links-list-items_no-bullit {
+    list-style-type: none;
+
+    padding: 0;
+}
+
+.header__link {
+    text-underline-position: under;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    max-width: 240px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
+
+}
+
+.header__address {
+    margin-left: auto;
+}
+
+.cover {
+    padding-top: 165px;
+    padding-bottom: 50px;
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.cover::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.cover__wrapper {
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+    gap: 103px;
+}
+
+.cover__title {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+    line-height: 115%;
+    margin-bottom: auto;
+    width: 100%;
+    color: #fff;
+}
+
+.cover__row-start {
+    margin-right: auto;
+}
+
+.cover__row-start span {
+    margin-left: 29px;
+}
+
+.cover__row-center {
+    margin: 0 auto;
+    margin-left: 457px;
+}
+
+.cover__row-center span {
+    margin-left: 31px;
+}
+
+.cover__row-end span {
+    display: inline-block;
+    transform: translateX(31px);
+}
+
+.cover__row-end {
+    margin-left: auto;
+}
+
+.cover__description {
+    display: flex;
+    margin-top: 21px;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 78px;
+    margin-left: auto;
+}
+
+.cover__description-text {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    /* 127.273% */
+    text-transform: uppercase;
+}
+
+.bet-button {
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 400;
+    border: 1px solid #fff;
+    border-radius: 0;
+    padding: 12px 32px;
+    line-height: normal;
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff;
+}
+
+.lots {
+    padding: 178px 50px 0 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.lots__heading {
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 27px;
+    margin-left: 40px;
+}
+
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-bottom: 30px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.lots__card-list-item:first-child {
+    width: 30%;
+}
+
+.lots__card-list-item {
+    min-height: 450px;
+    min-width: 430px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 0%;
+}
+
+.card-link {
+    text-decoration: none;
+}
+
+.card {
+    color: #fff;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    height: 100%;
+    z-index: 1;
+    padding: 50px 40px;
+}
+
+.card::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+}
+
+
+.card__title {
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: underline;
+    width: 350px;
+    line-height: 120%;
+}
+
+.card__text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.2;
+    display: flex;
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+    text-decoration: underline;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+
+    margin-left: 40px;
+    margin-top: 30px;
+    font-family: Raleway, sans-serif;
+    line-height: normal;
+    text-underline-offset: 5px;
+}
+
+.about {
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    padding: 181px 50px 180px 50px;
+}
+
+.about__logo {
+    background-color: black;
+    border-radius: 50%;
+    padding: 63px 46px;
+    margin: 0 95px;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer {
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.3px;
+}
+
+.footer .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.footer__menu {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+}
+
+.footer__menu-list {
+    list-style-type: none;
+    text-align: center;
+}
+
+.footer__menu-link {
+    text-underline-position: under;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    padding: 0;
+    list-style-type: none;
+    align-items: center;
+    gap: 48px;
+}
+
+.footer__social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
