--- a/styles/style.css
+++ b/styles/style.css
@@ -1,187 +1,182 @@
 .header {
-    width: 100%;
-    padding: 92px 0;
-    background-color: #fff;
-}
-
-.wrapper {
-    width: 100%;
-    height: 100%;
-    max-width: 1340px;
-    margin: 0 auto;
     display: flex;
-    align-items: center;
-
+    padding: 92px 50px;
+    font-size: 18px;
+    max-width: 1440px;
+    color: #000;
 }
+
+
+.section {
+    margin-bottom: 180px;
+}
+
+
+.header__menu {
+    display: flex;
+    width: calc((100% - 148px)/2);
+    align-items: center;
+}
+
 
 .header__links-list {
     display: flex;
-    align-items: center;
 }
 
-.header__menu {
-    margin-right: 205px;
-}
 
 .header__links-list-items {
-    padding-left: 14px;
     list-style: circle inside;
+    padding: 4px;
 }
+
 
 .header__links-list-items_no-bullit {
     list-style-type: none;
-
-    padding: 0;
+    padding-left: 0;
 }
+
 
 .header__link {
     text-underline-position: under;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
 }
+
 
 .header__link_active {
     text-decoration: none;
 }
 
-.address {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    max-width: 240px;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24.3px;
 
+.header__logo-image {
+    width: 148px;
 }
+
+.address {
+    font-style: normal;
+    text-underline-position: under;
+    max-width: 1340px;
+}
+
 
 .header__address {
     margin-left: auto;
+    padding-top: 5px;
+    font-weight: 400;
+    line-height: 24.3px; /* 135% */
 }
 
+
+.overlay {
+    position: absolute;
+    background-color: rgba(0,0,0,0.6);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+
 .cover {
-    padding-top: 165px;
-    padding-bottom: 50px;
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-position: center;
-    width: 100%;
+    min-height: 757px;
+    max-width: 1440px;
     background-repeat: no-repeat;
     position: relative;
-}
-
-.cover::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
 
-.cover__wrapper {
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    position: relative;
-    z-index: 2;
-    gap: 103px;
-}
 
 .cover__title {
     display: flex;
     flex-direction: column;
-    gap: 11px;
+    gap: 10px;
     font-size: 100px;
     font-weight: 700;
     letter-spacing: 30px;
     text-transform: uppercase;
-    line-height: 115%;
-    margin-bottom: auto;
+    z-index: 1;
+    padding: 165px 50px 0 50px;
+}
+
+
+.aligned-text_left {
+    text-align: left;
+}
+
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+
+.aligned-text_center {
+    max-width: 1340px;
     width: 100%;
-    color: #fff;
+    text-align: center;
 }
 
-.cover__row-start {
-    margin-right: auto;
+
+.aligned-text_right {
+    text-align: right; 
 }
 
-.cover__row-start span {
-    margin-left: 29px;
+
+.no-letter-spacing {
+    letter-spacing: 0;
 }
 
-.cover__row-center {
-    margin: 0 auto;
-    margin-left: 457px;
-}
-
-.cover__row-center span {
-    margin-left: 31px;
-}
-
-.cover__row-end span {
-    display: inline-block;
-    transform: translateX(31px);
-}
-
-.cover__row-end {
-    margin-left: auto;
-}
 
 .cover__description {
     display: flex;
-    margin-top: 21px;
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: end;
     align-items: center;
-    gap: 78px;
-    margin-left: auto;
+    margin-top: 118px;
+    padding-right: 50px;
 }
+
 
 .cover__description-text {
-    display: flex;
-    align-items: center;
-    gap: 25px;
-    color: #FFF;
-    text-align: center;
-    font-family: Raleway, sans-serif;
     font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    /* 127.273% */
+    word-spacing: 18px;
+    text-align: center;
+    margin-right: 80px;
     text-transform: uppercase;
 }
 
+
 .bet-button {
-    text-transform: uppercase;
     font-size: 22px;
-    font-weight: 400;
     border: 1px solid #fff;
     border-radius: 0;
     padding: 12px 32px;
     line-height: normal;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0,0,0,0);
+    cursor: pointer;
     color: #fff;
 }
 
+
 .lots {
-    padding: 178px 50px 0 50px;
     display: flex;
     flex-direction: column;
 }
 
+
+.wrapper {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+
 .lots__heading {
-    text-transform: uppercase;
-    font-size: 40px;
-    font-weight: 700;
     margin-bottom: 27px;
     margin-left: 40px;
+    color: #000;
+    font-size: 40px;
+    text-transform: uppercase;
 }
+
 
 .lots__card-list {
     display: flex;
@@ -189,28 +184,32 @@
     gap: 25px;
     margin-bottom: 30px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
 }
 
-.lots__card-list-item:first-child {
-    width: 30%;
+
+.card__block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px 40px;
+    width: 100%;
+    height: 100%;
 }
 
-.lots__card-list-item {
-    min-height: 450px;
-    min-width: 430px;
+
+li.lots__card-list-item {
     flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 0%;
+    width: 430px;
+    height: 450px;
 }
+
 
 .card-link {
-    text-decoration: none;
+    text-decoration: none;  
 }
 
+
 .card {
-    color: #fff;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -218,21 +217,11 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    z-index: 1;    
     height: 100%;
-    z-index: 1;
-    padding: 50px 40px;
 }
 
-.card::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: -1;
-}
+
 
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
@@ -240,48 +229,44 @@
 
 
 .card__title {
-    text-transform: uppercase;
     font-size: 22px;
     font-weight: 700;
     text-decoration: underline;
-    width: 350px;
-    line-height: 120%;
+    text-transform: uppercase;
 }
+
 
 .card__text {
     font-size: 20px;
-    font-weight: 400;
-    line-height: 1.2;
-    display: flex;
 }
 
+
 .card_type_book {
-    background-image: url(../images/card-lot-02.jpg);
+    background-image: url(../images/card-lot-02.jpg); 
 }
+
 
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
 }
 
+
 .lots__look-more-link {
     text-decoration: underline;
     font-size: 20px;
-    font-weight: 400;
-    font-style: normal;
-
-    margin-left: 40px;
-    margin-top: 30px;
-    font-family: Raleway, sans-serif;
-    line-height: normal;
-    text-underline-offset: 5px;
+    color: #000;
+    text-transform: lowercase;
+    padding-left: 40px;
+    padding-top: 1px;
 }
+
 
 .about {
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-    padding: 181px 50px 180px 50px;
+   display: flex;
+   flex-direction: row;
+   gap: 25px;
 }
+
 
 .about__logo {
     background-color: black;
@@ -290,10 +275,12 @@
     margin: 0 95px;
 }
 
+
 .about__logo-image {
     width: 148px;
     height: 114px;
 }
+
 
 .about__title {
     text-transform: uppercase;
@@ -301,32 +288,33 @@
     font-weight: 700;
     margin-top: 100px;
     margin-bottom: 100px;
+    color: #000;
 }
+
 
 .about__text {
     display: flex;
     flex-direction: column;
     gap: 25px;
     color: #000;
-    font-family: Raleway, sans-serif;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
 }
+
 
 .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     color: #000;
-    font-family: Raleway, sans-serif;
     font-size: 18px;
-    font-weight: 400;
-    line-height: 24.3px;
+    margin-bottom: 40px;
 }
 
-.footer .wrapper {
-    justify-content: space-between;
-    align-items: flex-start;
+.footer__address {
+    line-height: 24.3px; /* 135% */
+    padding-top: 2px;
 }
+
 
 .footer__menu {
     display: flex;
@@ -334,32 +322,31 @@
     width: auto;
 }
 
+
 .footer__menu-list {
     list-style-type: none;
     text-align: center;
 }
 
+
 .footer__menu-link {
     text-underline-position: under;
 }
+
 
 .footer__menu-link_active {
     text-decoration: none;
 }
 
+
 .footer__social-list {
     display: flex;
-    padding: 0;
+    flex-direction: row;
+    justify-content: end;
     list-style-type: none;
-    align-items: center;
     gap: 48px;
 }
 
-.footer__social-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .footer__social-icon {
     width: 48px;
